# eccw_gui

./: .gitignore  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.rst  makefile  setup.cfg  setup.py
eccw_gui/: __init__.py  __main__.py  main.py
eccw_gui/calculator_app/: __init__.py
eccw_gui/calculator_app/controllers/: __init__.py  calculator_main.py
eccw_gui/calculator_app/uis/: calculator_main.ui
eccw_gui/calculator_app/viewers/: __init__.py  calculator_main.py  make_viewers.sh
eccw_gui/documentation/: BIBLIO.bib  BIBLIO.json  ECCW.aux  ECCW.bbl  ECCW.blg  ECCW.epub  ECCW.md  ECCW.out  ECCW.tex  ECCW.toc  __init__.py  epub3.css  makefile
eccw_gui/images/: __init__.py  makefile  readme.txt  ressources.qrc  ressources_rc.py
eccw_gui/main_app/: __init__.py
eccw_gui/main_app/controllers/: dialog_about.py  main.py
eccw_gui/main_app/uis/: dialog_about.ui  main.ui
eccw_gui/main_app/viewers/: __init__.py  dialog_about.py  main.py
eccw_gui/plot_app/: __init__.py
eccw_gui/plot_app/controllers/: __init__.py  curve_graphicSettings.py  curve_settings.py  dialog_errors.py  plot_main.py  plot_window.py  point_settings.py  title_settings.py
eccw_gui/plot_app/uis/: curve_graphicSettings.ui  curve_settings.ui  dialog_errors.ui  plot_main.ui  plot_window.ui  point_settings.ui  title_settings.ui
eccw_gui/shared/: __init__.py  file_management.py  tools.py  wrappers.py
eccw_gui/windows/: __init__.py  win_post_install.py
scripts/: eccw  eccw.appdata.xml  eccw.desktop  eccw_win_post_install.py
tests/data/: ref_points.csv  test.eccw
(+54 files in other folders)
