[metadata]
name = eccw_gui
version = 1.1.0
description = Exact Critical Coulomb Wedge - Graphical User Interface: tools to compute and display the exact solution of any parameter of Critical Coulomb Wedge
long_description = file: README.rst
maintainer = BCL Mary
maintainer_email = baptiste.mary@u-cergy.Fr
url = https://github.com/bclmary/eccw_gui.git
license = GPL-3.0+
keywords = geology, accretionnary prism
platforms = any
classifiers =
    # Development Status:
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    #   6 - Mature
    #   7 - Inactive
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Environment :: X11 Applications :: Qt
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 7
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    eccw >= 1.1.0
    numpy >= 1.10
    matplotlib >= 2.0
    pyqt5 >= 5.6
    xmltodict >= 0.10
python_requires = >=3.4

